// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components >> DropdownMenuMobile should render the DropdownMenuMobile component properly when the dropdown menu is open and the user is signed: DropdownMenuMobile-opened 1`] = `
<div>
  <div
    class="relative inline-block text-left"
  >
    <button
      aria-controls="headlessui-menu-items-:r9:"
      aria-expanded="true"
      aria-haspopup="true"
      class=""
      id="headlessui-menu-button-:r7:"
      type="button"
    >
      <svg
        fill="white"
        height="32px"
        id="Layer_1"
        version="1.1"
        viewBox="0 0 32 32"
      >
        <path
          d="M4,10h24c1.104,0,2-0.896,2-2s-0.896-2-2-2H4C2.896,6,2,6.896,2,8S2.896,10,4,10z M28,14H4c-1.104,0-2,0.896-2,2  s0.896,2,2,2h24c1.104,0,2-0.896,2-2S29.104,14,28,14z M28,22H4c-1.104,0-2,0.896-2,2s0.896,2,2,2h24c1.104,0,2-0.896,2-2  S29.104,22,28,22z"
        />
      </svg>
    </button>
    <div
      aria-labelledby="headlessui-menu-button-:r7:"
      class="absolute right-0 z-10 mt-2 w-56 origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none transition ease-out duration-100 transform opacity-0 scale-95"
      id="headlessui-menu-items-:r9:"
      role="menu"
      tabindex="0"
    >
      <div
        class="py-1"
        role="none"
      >
        <button
          class=" bg-gray-100 text-gray-900 block w-full px-4 py-2 text-left text-sm"
          id="headlessui-menu-item-:ra:"
          role="menuitem"
          tabindex="-1"
          type="button"
        >
          About
        </button>
      </div>
      <div
        class="py-1"
        role="none"
      >
        <button
          class=" bg-gray-100 text-gray-900 block w-full px-4 py-2 text-left text-sm"
          id="headlessui-menu-item-:rb:"
          role="menuitem"
          tabindex="-1"
          type="button"
        >
          Logout
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`components >> DropdownMenuMobile should render the DropdownMenuMobile component properly when the dropdown menu is open: DropdownMenuMobile-opened 1`] = `
<div>
  <div
    class="relative inline-block text-left"
  >
    <button
      aria-controls="headlessui-menu-items-:r4:"
      aria-expanded="true"
      aria-haspopup="true"
      class=""
      id="headlessui-menu-button-:r2:"
      type="button"
    >
      <svg
        fill="white"
        height="32px"
        id="Layer_1"
        version="1.1"
        viewBox="0 0 32 32"
      >
        <path
          d="M4,10h24c1.104,0,2-0.896,2-2s-0.896-2-2-2H4C2.896,6,2,6.896,2,8S2.896,10,4,10z M28,14H4c-1.104,0-2,0.896-2,2  s0.896,2,2,2h24c1.104,0,2-0.896,2-2S29.104,14,28,14z M28,22H4c-1.104,0-2,0.896-2,2s0.896,2,2,2h24c1.104,0,2-0.896,2-2  S29.104,22,28,22z"
        />
      </svg>
    </button>
    <div
      aria-labelledby="headlessui-menu-button-:r2:"
      class="absolute right-0 z-10 mt-2 w-56 origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none transition ease-out duration-100 transform opacity-0 scale-95"
      id="headlessui-menu-items-:r4:"
      role="menu"
      tabindex="0"
    >
      <div
        class="py-1"
        role="none"
      >
        <button
          class=" bg-gray-100 text-gray-900 block w-full px-4 py-2 text-left text-sm"
          id="headlessui-menu-item-:r5:"
          role="menuitem"
          tabindex="-1"
          type="button"
        >
          About
        </button>
      </div>
      <div
        class="py-1"
        role="none"
      >
        <button
          class=" bg-gray-100 text-gray-900 block w-full px-4 py-2 text-left text-sm"
          id="headlessui-menu-item-:r6:"
          role="menuitem"
          tabindex="-1"
          type="button"
        >
          Login
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`components >> DropdownMenuMobile should render the DropdownMenuMobile component properly when the user is signed: DropdownMenuMobile-signed 1`] = `
<div>
  <div
    class="relative inline-block text-left"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class=""
      id="headlessui-menu-button-:r1:"
      type="button"
    >
      <svg
        fill="white"
        height="32px"
        id="Layer_1"
        version="1.1"
        viewBox="0 0 32 32"
      >
        <path
          d="M4,10h24c1.104,0,2-0.896,2-2s-0.896-2-2-2H4C2.896,6,2,6.896,2,8S2.896,10,4,10z M28,14H4c-1.104,0-2,0.896-2,2  s0.896,2,2,2h24c1.104,0,2-0.896,2-2S29.104,14,28,14z M28,22H4c-1.104,0-2,0.896-2,2s0.896,2,2,2h24c1.104,0,2-0.896,2-2  S29.104,22,28,22z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`components >> DropdownMenuMobile should render the DropdownMenuMobile component properly: DropdownMenuMobile-default 1`] = `
<div>
  <div
    class="relative inline-block text-left"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class=""
      id="headlessui-menu-button-:r0:"
      type="button"
    >
      <svg
        fill="white"
        height="32px"
        id="Layer_1"
        version="1.1"
        viewBox="0 0 32 32"
      >
        <path
          d="M4,10h24c1.104,0,2-0.896,2-2s-0.896-2-2-2H4C2.896,6,2,6.896,2,8S2.896,10,4,10z M28,14H4c-1.104,0-2,0.896-2,2  s0.896,2,2,2h24c1.104,0,2-0.896,2-2S29.104,14,28,14z M28,22H4c-1.104,0-2,0.896-2,2s0.896,2,2,2h24c1.104,0,2-0.896,2-2  S29.104,22,28,22z"
        />
      </svg>
    </button>
  </div>
</div>
`;
